// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scheduled /> should match the default snapshot 1`] = `
Array [
  <div
    className="sc-bZQynM cccIja"
  >
    <div
      className="sc-VigVT loJKIZ"
    >
      <ul
        className="sc-jTzLTM cCDuuT"
      >
        <li
          className="sc-fjdhpX cPKAso"
        >
          <span>
            Home
          </span>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="sc-iwsKbI eKLVrf"
  >
    <div
      className="sc-gZMcBi dcMSXI"
    >
      <div
        className="sc-gqjmRU fBRtmk"
      >
        <h1
          className="sc-EHOje geWHoL"
          data-qa="page-heading-text"
        >
          Schedule for Test User
        </h1>
      </div>
      <div>
        <div
          className="sc-jzJRlG keUrGr"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <span>
            Print this page
          </span>
        </div>
      </div>
    </div>
    <div
      className="page-content"
    >
      <div
        className="sc-kgoBCf gcvyaK"
      >
        <label
          className="sc-bwzfXH gCfcLz"
        >
          <input
            checked="checked"
            className="sc-htpNat eTlQXL"
            id="thisWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb kLkdLT"
          >
            This week
          </span>
        </label>
        <label
          className="sc-bwzfXH gCfcLz"
        >
          <input
            className="sc-htpNat eTlQXL"
            id="nextWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb kLkdLT"
          >
            Next week
          </span>
        </label>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Wednesday

          <span>
            02/27/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Thursday

          <span>
            02/28/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Friday

          <span>
            03/01/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              <div
                className="sc-cSHVUG dVSskx"
              >
                <span
                  className="whereabouts-startTime"
                >
                  10:00
                </span>

                -
                <span
                  className="whereabouts-endTime"
                >

                  10:10

                </span>
                <div
                  className="sc-kAzzGY sLPLa"
                >
                  Careers Adviser Appointment
                </div>
                I'm a recurring bulk appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Saturday

          <span>
            03/02/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Sunday

          <span>
            03/03/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Monday

          <span>
            03/04/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Tuesday

          <span>
            03/05/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              <div
                className="sc-cSHVUG dVSskx"
              >
                <span
                  className="whereabouts-startTime"
                >
                  13:00
                </span>

                -
                <span
                  className="whereabouts-endTime"
                >

                  14:00

                </span>
                <div
                  className="sc-kAzzGY sLPLa"
                >
                  Another appointment
                </div>
                I'm another appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jzJRlG keUrGr"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span>
      Print this page
    </span>
  </div>,
]
`;

exports[`<Scheduled /> should match the snapshot with a cancelled event 1`] = `
Array [
  <div
    className="sc-bZQynM cccIja"
  >
    <div
      className="sc-VigVT loJKIZ"
    >
      <ul
        className="sc-jTzLTM cCDuuT"
      >
        <li
          className="sc-fjdhpX cPKAso"
        >
          <span>
            Home
          </span>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="sc-iwsKbI eKLVrf"
  >
    <div
      className="sc-gZMcBi dcMSXI"
    >
      <div
        className="sc-gqjmRU fBRtmk"
      >
        <h1
          className="sc-EHOje geWHoL"
          data-qa="page-heading-text"
        >
          Schedule for Test User
        </h1>
      </div>
      <div>
        <div
          className="sc-jzJRlG keUrGr"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <span>
            Print this page
          </span>
        </div>
      </div>
    </div>
    <div
      className="page-content"
    >
      <div
        className="sc-kgoBCf gcvyaK"
      >
        <label
          className="sc-bwzfXH gCfcLz"
        >
          <input
            checked="checked"
            className="sc-htpNat eTlQXL"
            id="thisWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb kLkdLT"
          >
            This week
          </span>
        </label>
        <label
          className="sc-bwzfXH gCfcLz"
        >
          <input
            className="sc-htpNat eTlQXL"
            id="nextWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb kLkdLT"
          >
            Next week
          </span>
        </label>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Wednesday

          <span>
            02/27/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Thursday

          <span>
            02/28/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Friday

          <span>
            03/01/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              <div
                className="sc-cSHVUG dVSskx"
              >
                <span
                  className="whereabouts-startTime"
                >
                  10:00
                </span>

                -
                <span
                  className="whereabouts-endTime"
                >

                  10:10

                </span>
                <div
                  className="sc-kAzzGY sLPLa"
                >
                  Careers Adviser Appointment
                </div>
                I'm a recurring bulk appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Saturday

          <span>
            03/02/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Sunday

          <span>
            03/03/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              <div
                className="sc-cSHVUG dVSskx"
              >
                <span
                  className="whereabouts-startTime"
                >
                  11:00
                </span>

                -
                <span
                  className="whereabouts-endTime"
                >

                  11:30

                </span>
                <div
                  className="sc-kAzzGY sLPLa"
                >
                  Another appointment
                </div>
                I'm another appointment.
                <span
                  className="cancelled"
                >
                   (cancelled)
                </span>
              </div>
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Monday

          <span>
            03/04/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-chPdSV hhLYVx"
      >
        <h2
          className="sc-EHOje dInovL"
        >
          Tuesday

          <span>
            03/05/2019
          </span>
        </h2>
        <div
          className="sc-kGXeez iWQHKe"
        >
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-dxgOiQ eVQPQB"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-dxgOiQ Tiamy"
              value="afternoon"
            >
              <div
                className="sc-cSHVUG dVSskx"
              >
                <span
                  className="whereabouts-startTime"
                >
                  13:00
                </span>

                -
                <span
                  className="whereabouts-endTime"
                >

                  14:00

                </span>
                <div
                  className="sc-kAzzGY sLPLa"
                >
                  Another appointment
                </div>
                I'm another appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kpOJdX djHYrh"
          >
            <h3
              className="sc-EHOje diBbSC"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-dxgOiQ evGfUO"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-jzJRlG keUrGr"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span>
      Print this page
    </span>
  </div>,
]
`;
